--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,45 @@
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
+
+body {
+  font-family: "Josefin Sans", cursive;
+}
+
 .App {
   text-align: center;
 }
+.container {
+  width: 450px;
+  background-color: purple;
+  border-radius: 1%;
+  display: flex;
+  padding: 2rem;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  box-shadow: 4px 4px 4px grey;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.question-section {
+  margin: 2px;
+}
+.answerSection {
+  margin: 20px;
+}
+.question-count {
+  margin-bottom: 10px;
+}
+
+button {
+  width: 100%;
+  background: transparent;
+  border: 1px solid white;
+  height: 30px;
+  margin: 5px;
+  font-family: "Josefin Sans", cursive;
+  color: white;
+  border-radius: 2px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +48,31 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 468px) {
+  .container {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .mobileQuestion {
+    margin: 2px;
+    width: 100%;
+  }
+
+  .mobileAnswer {
+    margin: 20px;
+    width: 100%;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and( max-width: 468px) {
+  .container {
+    width: 450px;
+    background-color: green;
+    border-radius: 1%;
+    display: flex;
+    padding: 20px;
+    flex-direction: row;
+    box-shadow: 4px 4px 4px grey;
   }
 }
